--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@pnotify/animate": "^5.2.0",
     "@pnotify/core": "^5.2.0",
     "@pnotify/mobile": "^5.2.0",
+    "canvas-confetti": "^1.9.3",
+    "framer-motion": "^11.15.0",
     "notyf": "^3.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
