--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-    VITE_API_BASE_URL=/api
-    VITE_TRY_ON_ENDPOINT=/try-on
-    VITE_VIDEO_FEED_ENDPOINT=/video-feed
+# Frontend .env
+VITE_BACKEND_URL=http://localhost:5000
+VITE_DEFAULT_SESSION_ID=frontend-session
+VITE_POLL_INTERVAL=1000
