--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-# Frontend .env
-VITE_BACKEND_URL=http://localhost:5000
-VITE_DEFAULT_SESSION_ID=frontend-session
-VITE_POLL_INTERVAL=1000
+# API Configuration
+VITE_API_BASE_URL=http://localhost:8080
+VITE_SESSION_ID=frontend-session
+
+# Video Performance Defaults
+VITE_DEFAULT_VIDEO_QUALITY=medium
+VITE_DEFAULT_FPS=15
